--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -110,3 +110,10 @@ input {
   margin: 5px;
   margin-bottom: 10px;
 }
+
+table, th, tr, td{
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+  margin-left: 10%;
+}
